--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
- "ipykernel>=6.30.1",
- "python-box>=7.3.2",
- "python-dotenv>=1.1.1",
- "pyyaml>=6.0.2",
- "requests>=2.32.4",
- "toml>=0.10.2",
+    "fastapi[standard]>=0.116.1",
+    "ipykernel>=6.30.1",
+    "ipywidgets>=8.1.7",
+    "python-box>=7.3.2",
+    "python-dotenv>=1.1.1",
+    "pyyaml>=6.0.2",
+    "requests>=2.32.4",
+    "toml>=0.10.2",
+    "unstructured-pytesseract>=0.3.15",
+    "unstructured[docx,pdf]>=0.18.11",
 ]
 
 [build-system]
