--- a/src/ats/config/raw/config.yaml
+++ b/src/ats/config/raw/config.yaml
@@ -6,4 +6,4 @@ DATA:
         ROOT_DIR: ingestion 
         RAW_DATA_DIR: raw 
         PARSED_DATA_DIR: parsed 
-        FINAL_DATA_DIR: final
+        # FINAL_DATA_DIR: final
