--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.13.5",
-    "camelot-py[cv]>=1.0.9",
+    "camelot-py>=1.0.9",
     "fastapi[standard]>=0.116.1",
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
     "jsonschema>=4.25.1",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
+    "pymongo>=4.14.1",
     "pymupdf>=1.26.3",
     "pytesseract>=0.3.13",
     "python-box>=7.3.2",
