--- a/src/ats/config/raw/config.yaml
+++ b/src/ats/config/raw/config.yaml
@@ -1,9 +1,9 @@
 ROOT_DIR: artifacts 
-
+REPORTS: 
+    ROOT_DIR: reports
 DATA: 
     ROOT_DIR: data 
     INGESTION: 
         ROOT_DIR: ingestion 
         RAW_DATA_DIR: raw 
-        PARSED_DATA_DIR: parsed 
-        # FINAL_DATA_DIR: final
+        SCHEMA_DATA_DIR: schema 
