all process implementation complete only testing remains

--- a/src/ats/config/raw/config.yaml
+++ b/src/ats/config/raw/config.yaml
@@ -16,4 +16,11 @@ DATA:
         PARSED_DATA_DIR: parsed 
         STRUCTURED_DATA_DIR: structured 
         OUTPUT_DIR: output
-        
+
+JD:
+    ROOT_DIR: job
+
+SCORINGS:
+    ROOT_DIR: scores
+    DATA_DIR: data
+    OUTPUT_DIR: output
