--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
     "python-magic>=0.4.27",
     "pyyaml>=6.0.2",
     "requests>=2.32.4",
+    "scikit-learn>=1.7.2",
     "selenium>=4.35.0",
+    "sentence-transformers>=5.1.0",
     "toml>=0.10.2",
 ]
 
