--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 MONGODB_URI=mongodb atlass uri
-DATABASE=database name 
+DATABASE=database name
 COLLECTION=collection name
 FIRECRAWL_API_KEY=your firecrawl api key
 GOOGLE_API_KEY=your google/gemini api key
 LLM=gemini model name to be used for structured output
 RESUME_TOKEN_LIMIT=10000 # resume tokens limit to avoid miss use of product
-JD_URL=public url to parse jd except linkedin.com (recomended naukri.com)
+JD_URL=public url to parse jobdescription(tested on naukri.com)
+GOOGLE_APPLICATION_CREDENTIALS=full path of json file with credentials of IAM(Service Account) user
+GCP_BUCKET=pre-existing bucket available at gcp
