--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-ipykernel
-python-box 
-python-dotenv 
-PyYAML
-requests
-toml
-fastapi 
-fastapi[standard] 
-PyMuPDF
-python-docx
-beautifulsoup4
-selenium
-pytesseract
-Pillow
-python-magic
-jsonschema
-camelot-py
-pandas
-ipywidgets 
-firecrawl-py
-langchain-google-genai
-python-dateutil
 aiofiles
-sentence-transformers
+beautifulsoup4
+camelot-py
+fastapi[standard]
+firecrawl-py
+ipykernel
+ipywidgets
+jsonschema
+langchain-google-genai
+pandas
+pillow
+pymongo
+pymupdf
+pytesseract
+python-box
+python-dateutil.post0
+python-docx
+python-dotenv
+python-magic
+pyyaml
+requests
 scikit-learn
+selenium
+sentence-transformers
+toml
+google-cloud-storage
