Add CI/CD pipeline

--- a/secrets.example/.env.example
+++ b/secrets.example/.env.example
@@ -6,5 +6,8 @@ GOOGLE_API_KEY=your google/gemini api key
 LLM=gemini model name to be used for structured output
 RESUME_TOKEN_LIMIT=10000 # resume tokens limit to avoid miss use of product
 JD_URL=public url to parse jobdescription(tested on naukri.com)
-GOOGLE_APPLICATION_CREDENTIALS=full path of json file with credentials of IAM(Service Account) user
+'''
+# used when creating docker image in local for testing 
+GOOGLE_APPLICATION_CREDENTIALS=/full/path/to/the/service-account-key.json
+'''
 GCP_BUCKET=pre-existing bucket available at gcp
