--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "camelot-py>=1.0.9",
     "fastapi[standard]>=0.116.1",
     "firecrawl-py>=4.1.1",
+    "gcloud>=0.18.3",
     "google-cloud-storage>=3.4.1",
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
