--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pymongo
 pymupdf
 pytesseract
 python-box
-python-dateutil.post0
+python-dateutil
 python-docx
 python-dotenv
 python-magic
@@ -23,4 +23,5 @@ scikit-learn
 selenium
 sentence-transformers
 toml
+gcloud
 google-cloud-storage
