gcloud storage authentication added to docker image

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -148,6 +148,7 @@ jobs:
                 --restart always \
                 -p 8080:8080 \
                 --env-file /opt/my-app/.env \
+                --add-host metadata.google.internal:169.254.169.254 \
                 ${IMAGE_URL}
               
               echo 'Cleaning up...'
