deplyment tested every thing was perfectly working

--- a/secrets.example/.env.example
+++ b/secrets.example/.env.example
@@ -9,5 +9,7 @@ JD_URL=public url to parse jobdescription(tested on naukri.com)
 '''
 # used when creating docker image in local for testing 
 GOOGLE_APPLICATION_CREDENTIALS=/full/path/to/the/service-account-key.json
+                    OR 
+Directly authenticate from gcloud if not testing docker image in local
 '''
 GCP_BUCKET=pre-existing bucket available at gcp
